# lintp

./: .editorconfig  .gitattributes  .gitignore  .npmignore  .prettierignore  .prettierrc  .tool-versions  .versionrc.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  commitlint.config.js  commitlint.config.ts  eslint.config.mjs  index.js  index.ts  lintp.yml  package-lock.json  package.json  prettier.config.ts  release-please-config.json  test-file.txt  test-lint.txt  test-pr-checks.txt  tsconfig.build.json  tsconfig.json  vitest.config.ts
.github/: test-file.txt
.github/workflows/: auto-tag.yml  commitlint.yml  deploy-docs.yml  docs.yml  npm-publish.yml  pr-checks.yml  pr-title-check.yml  release-please.yml  release.yml
.husky/: pre-push
benches/: lint_bench.rs
docs/: COMMON_PATTERNS.md  CONTRIBUTING.md  DSL_REFERENCE.md  EXAMPLES.md  index.html
docs/assets/: docs.css
docs/pages/: getting-started.html
scripts/: build-docs.test.ts  build-docs.ts  cargo-version-updater.js  check-coverage.ts  install.js  prepare-platform-package.ts  sync-optional-deps.ts  sync-toml-to-package.js  sync-toml-to-package.test.ts  sync-toml-to-package.ts
src/: config.rs  error.rs  index.test.ts  index.ts  lib.rs  lint.rs  main.rs  util.rs
src/dsl/: ast.rs  evaluator.rs  functions.rs  grammar.pest  mod.rs  parser.rs
tests/: advanced_dsl_tests.rs  config_tests.rs  convention_coverage_tests.rs  dsl_comprehensive_tests.rs  evaluator_tests.rs  functions_tests.rs  integration_tests.rs  lint_tests.rs  parser_tests.rs  test_constants.rs  test_helpers.rs
tests/common/: constants.rs  mod.rs
