[package]
name = "lintp"
version = "0.3.1"
edition = "2021"
description = "File system linter with a custom DSL for directory structure validation"
authors = ["Nico Arehart"]
license = "MIT"
rust-version = "1.85"
repository = "https://github.com/narehart/lintp"
homepage = "https://narehart.github.io/lintp/"
documentation = "https://narehart.github.io/lintp/"
readme = "README.md"
keywords = ["linter", "filesystem", "naming-conventions", "dsl", "cli"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
# Keep the published crate to Rust sources; the npm/JS half of the repo
# and CI config have no business in the crates.io tarball
exclude = [
    ".github/",
    ".husky/",
    ".vscode/",
    "bin/",
    "docs/",
    "_site/",
    "scripts/",
    "*.ts",
    "*.mjs",
    "package.json",
    "package-lock.json",
    ".asdfrc",
    ".editorconfig",
    ".npmignore",
    ".prettierignore",
    ".prettierrc",
    ".release-please-manifest.json",
    ".tool-versions",
    "release-please-config.json",
    "tsconfig.json",
    "tsconfig.build.json",
]

# Both lib and bin targets
[[bin]]
name = "lintp"
path = "src/main.rs"

[lib]
name = "lintp"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
pest = "2.5"
pest_derive = "2.5"
glob = "0.3"
walkdir = "2.3"
regex = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
colored = "2.0"

[dev-dependencies]
tempfile = "3.3"
criterion = "0.5"

[[bench]]
name = "lint_bench"
harness = false

[[test]]
name = "parser_tests"
path = "tests/parser_tests.rs"

[[test]]
name = "evaluator_tests"
path = "tests/evaluator_tests.rs"

[[test]]
name = "functions_tests"
path = "tests/functions_tests.rs"

[[test]]
name = "config_tests"
path = "tests/config_tests.rs"

[[test]]
name = "lint_tests"
path = "tests/lint_tests.rs"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

[[test]]
name = "advanced_dsl_tests"
path = "tests/advanced_dsl_tests.rs"